--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -570,6 +570,13 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
+/*--------------
+    Promo
+---------------*/
+
+#example.index .promo.stripe {
+  padding: 3em 0em;
+}
 
 
 /*--------------
