--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -13,10 +13,9 @@
       <div class="three wide column">
         <h4 class="ui inverted header">Network</h4>
         <div class="ui inverted link list">
-          <a class="item" href="http://www.learnsemantic.com">Learn Semantic</a>
           <a class="item" href="https://github.com/Semantic-Org/Semantic-UI" target="_blank">GitHub Repo</a>
-          <a class="item" href="http://legacy.semantic-ui.com">1.0 Docs</a>
-          <a class="item" href="http://alpha.semantic-ui.com">0.x Docs</a>
+          <a class="item" href="http://1.semantic-ui.com">1.x Docs</a>
+          <a class="item" href="http://legacy.semantic-ui.com">0.x Docs</a>
         </div>
       </div>
    <!--    <div class="three wide column">
