--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -433,6 +433,14 @@ blockquote .author {
 }
 
 /*----------------
+   Text Layout
+-----------------*/
+
+#example.text .main.container {
+  max-width: 750px !important;
+}
+
+/*----------------
    Basic Layout
 -----------------*/
 
