--- a/server/partials/demo-sidebar.html
+++ b/server/partials/demo-sidebar.html
@@ -1,3 +1,15 @@
+<div class="ui simple sidebar inverted vertical menu">
+  <a class="item">
+    1
+  </a>
+  <a class="item">
+    2
+  </a>
+  <a class="item">
+    3
+  </a>
+</div>
+
 <div class="ui left demo vertical inverted labeled icon sidebar menu">
   <a class="item">
     <i class="home icon"></i>
