--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -934,6 +934,15 @@ blockquote .author {
   background-color: #F8F8F8;
   box-shadow: 0px 0px 0px 1px #DDDDDD;
 }
+#example .example > .html > .top.attached.label .copy {
+  position: absolute;
+  top: 9px;
+  right: 8px;
+  color: #AAAAAA;
+}
+#example .example > .html > .top.attached.label .copy:hover {
+  color: #666666;
+}
 #example .example > .empty.html.segment {
   padding: 1.15em 1em 1em;
 }
