fix the inconsistent behavior of the dimmer examples, closes Semantic-Org/Semantic-UI#3944

--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -980,6 +980,10 @@ blockquote .author {
   width: 175px;
   height: 175px;
 }
+#example .example .annotation.visible + .icon.buttons {
+  margin-top: 1rem;
+}
+
 
 /*******************************
            UI Pages
