--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -2037,6 +2037,10 @@ code .chunk {
 }
 
 
+/*******************************
+        Advertisements
+*******************************/
+
 /* Rail Ad */
 #example .rail .advertisement {
   display: block;
@@ -2049,6 +2053,74 @@ code .chunk {
   margin: 0 -1.5em;
   width: auto;
 }
+
+#example .bsa-cpc #_default_ {
+  position: relative;
+  background-color: #FAFAFA;
+  border-bottom: solid 1px #dddddd;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+#example .bsa-cpc .default-ad {
+  display: none;
+}
+
+#example .bsa-cpc ._default_ {
+  display: inline-block;
+  overflow: hidden;
+  padding: .5em 1em .4em;
+  line-height: 1.5;
+}
+
+#example .bsa-cpc ._default_ > * {
+  vertical-align: middle;
+}
+
+#example .bsa-cpc a {
+  text-decoration: none;
+}
+
+#example .bsa-cpc .default-image {
+  display: inline-block;
+  margin-right: 6px;
+  line-height: 0;
+}
+
+#example .bsa-cpc .default-image img {
+  height: 18px;
+  border-radius: 3px;
+}
+
+#example .bsa-cpc .default-title:after {
+  content: " — ";
+}
+
+#example .bsa-cpc .default-title,
+#example .bsa-cpc .default-description {
+  display: inline;
+}
+
+#example .bsa-cpc .default-title {
+  position: relative;
+  font-weight: 600;
+}
+
+#example .bsa-cpc .default-description:after {
+  position: relative;
+  top: -1px;
+  right: -8px;
+  padding: 3px 6px;
+  border-radius: 3px;
+  background-color: #35bdb2;
+  color: #fff;
+  content: "Ad";
+  text-transform: uppercase;
+  font-size: 9px;
+  font-family: Verdana, sans-serif;
+}
+
 
 
 /*******************************
