Fix language modal selection of english

--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -1,5 +1,5 @@
 <div class="scrolling menu">
-  <div class="item" data-percent="100" data-value="en data-english="English">
+  <div class="item" data-percent="100" data-value="en" data-english="English">
     <span class="description">English</span>
     English
   </div>
