--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -1084,6 +1084,16 @@ blockquote .author {
 }
 
 /*--------------
+  Content Loader
+---------------*/
+#example .content.example .ignored.card {
+  display: none;
+}
+#example .content.example .card .image + .content {
+  min-height: 94px;
+}
+
+/*--------------
     Colored
 ---------------*/
 
