--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -2010,6 +2010,7 @@ code .chunk {
   z-index: 1;
   background-color: #1b1c1d;
   width: 250px;
+  height: 100%;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
       -ms-flex: 0 0 auto;
@@ -2059,6 +2060,18 @@ code .chunk {
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.08) inset;
   background-color: #FAFAFA;
   padding-top: 2em;
+}
+
+#example .toc .item.hide,
+#example .toc .item .item.hide,
+#example #toc.sidebar .item.hide,
+#example #toc.sidebar .item .item.hide {
+  display: none;
+}
+
+.press-enter {
+  float: right;
+  color: #35bdb2;
 }
 
 /*******************************
