Fix wrong data-value locale (#422)

--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -63,7 +63,7 @@
     <span class="description">Türkçe</span>
     Turkish
   </div>
-  <div class="item" data-percent="10" data-value="kr" data-english="Korean">
+  <div class="item" data-percent="10" data-value="ko" data-english="Korean">
     <span class="description">한국어</span>
     Korean
   </div>
